--- a/cart/src/app/login/login.component.html
+++ b/cart/src/app/login/login.component.html
@@ -1,3 +1,13 @@
 <p>
   login works!
 </p>
+<form class="example-form">
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Favorite food" value="Sushi">
+  </mat-form-field>
+
+  <mat-form-field class="example-full-width">
+    <textarea matInput placeholder="Leave a comment"></textarea>
+  </mat-form-field>
+  <button mat-button>Click me!</button>
+</form>
