--- a/cart/src/app/login/login.component.html
+++ b/cart/src/app/login/login.component.html
@@ -3,11 +3,11 @@
 </p>
 <form class="example-form">
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Favorite food" value="Sushi">
+    <input matInput placeholder="Username" name="username" [(ngModel)]="user.username">
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
-    <textarea matInput placeholder="Leave a comment"></textarea>
+    <input matInput placeholder="Password" name="password" [(ngModel)]="user.password">
   </mat-form-field>
-  <button mat-button>Click me!</button>
+  <button mat-button (click)="loginUser(user)">Click me!</button>
 </form>
