Change Custom Theme

--- a/cart/src/app/login/login.component.html
+++ b/cart/src/app/login/login.component.html
@@ -9,5 +9,5 @@
   <mat-form-field class="example-full-width">
     <input matInput placeholder="Password" name="password" [(ngModel)]="user.password">
   </mat-form-field>
-  <button mat-button (click)="loginUser(user)">Click me!</button>
+  <button mat-button mat-raised-button color="accent" (click)="loginUser(user)">Click me!</button>
 </form>
