--- a/cart/src/app/sidenav/sidenav.component.html
+++ b/cart/src/app/sidenav/sidenav.component.html
@@ -1,65 +1,120 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer [opened]="!small" class="sidenav mat-elevation-z8" fixedInViewport="true"
-    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'">
-    <mat-toolbar class="white"><img src="assets/logo.png" width="80%" style="margin:auto"></mat-toolbar>
-    <mat-nav-list>
-      <a class="sidenavelement" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/"
-        mat-list-item href="#">
-        <mat-icon>dashboard</mat-icon> &nbsp; Dashboard
-      </a>
-      <a class="sidenavelement" routerLinkActive="active-link" routerLink="/user" mat-list-item href="#">
-        <mat-icon>person</mat-icon> &nbsp; User Profile
-      </a>
-      <a class="sidenavelement" routerLinkActive="active-link" routerLink="/table" mat-list-item href="#">
-        <mat-icon>table_chart</mat-icon> &nbsp; Table List
-      </a>
-      <a class="sidenavelement" routerLinkActive="active-link" routerLink="/typo" mat-list-item href="#">
-        <mat-icon>text_fields</mat-icon> &nbsp; Typography
-      </a>
-      <a class="sidenavelement" routerLinkActive="active-link" routerLink="/icons" mat-list-item href="#">
-        <mat-icon>insert_emoticon</mat-icon> &nbsp; Icons
-      </a>
-      <a class="sidenavelement" routerLinkActive="active-link" routerLink="/maps" mat-list-item href="#">
-        <mat-icon>map</mat-icon> &nbsp; Maps
-      </a>
-      <a class="sidenavelement" routerLinkActive="active-link" routerLink="/notify" mat-list-item href="#">
-        <mat-icon>notification_important</mat-icon> &nbsp; Notifications
-      </a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar class="grey lighten-2" style="min-height:90px">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>Material Dashboard</span>
-      <span class="example-fill-remaining-space"></span>
+<!-- <md-sidenav md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left"
+            class="md-whiteframe-z2 md-sidenav-left">
+  <md-toolbar md-theme="custom" class="md-hue-1 md-whiteframe-z2">
+    <md-button layout="row" layout-align="center center" class="md-toolbar-tools md-warn"
+               href="https://github.com/flatlogic/angular-material-dashboard">
+      <h1>AMD</h1>
+    </md-button>
+  </md-toolbar>
+      <md-button ng-repeat-start="item in vm.menuItems" layout="column" layout-align="center center"
+                 flex class="capitalize" ng-click="vm.selectItem(item)"
+                 ui-sref-active="md-warn" ui-sref="{{item.sref}}">
+          <div hide-sm hide-md class="md-tile-content">
+              <i class="material-icons md-36">{{item.icon}}</i>
+          </div>
+          <div class="md-tile-content">
+              {{item.name}}
+          </div>
+      </md-button>
+      <md-divider ng-repeat-end></md-divider>
+      <md-button ng-click="vm.showActions($event)" layout-align="center center">
+          <div class="md-tile-content">
+            Actions
+          </div>
+      </md-button>
+</md-sidenav>
 
-      <span class="example-fill-remaining-space"></span>
-      <p class="hide-on-med-and-down" style="margin-top:-10px">
-        <mat-form-field appearance="legacy"
-          style="max-height:50px; padding-bottom: 0px; margin-bottom: 0px !important; margin-top: -10px">
-          <mat-label>Search</mat-label>
-          <input matInput>
-          <mat-icon matSuffix>search</mat-icon>
-        </mat-form-field>
-      </p>
-      <span class="example-fill-remaining-space"></span>
-      <button mat-icon-button color="primary">
-        <mat-icon>dashboard</mat-icon>
-      </button>
-      <button mat-icon-button color="primary" matBadge="8" matBadgePosition="after" matBadgeColor="accent">
-        <i style="font-size:24px " class="fas fa-bell"></i>
-      </button> &nbsp;
+<div layout="column" flex>
+    <md-toolbar layout="row" layout-align="center center">
+        <section layout-align="start center" layout-fill flex>
+            <md-button hide-gt-sm ng-click="vm.toggleItemsList()" aria-label="Menu">
+                <i class="material-icons">menu</i>
+            </md-button>
+        </section>
+        <section layout-align="end center">
+            <md-button class="toolbar-button" aria-label="Search">
+                <i class="material-icons">search</i>
+            </md-button>
+            <md-button class="toolbar-button" aria-label="Notifications">
+                <i class="material-icons">notifications</i>
+                <span class="notifications-label">7</span>
+            </md-button>
+            <md-button class="toolbar-button" aria-label="Settings" ng-click="vm.toggleRightSidebar()">
+                <i class="material-icons">menu</i>
+            </md-button>
+        </section>
+    </md-toolbar>
 
-      <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
-        <i style="font-size:24px " class="fas fa-user"></i>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item>Change Password</button>
-        <button mat-menu-item>Sign Out</button>
-      </mat-menu>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-  </mat-sidenav-content>
-</mat-sidenav-container>
+    <md-content flex class="md-padding page-content">
+        <div ui-view></div>
+    </md-content>
+</div>
+
+<md-sidenav md-component-id="right"
+            class="md-whiteframe-z2 md-sidenav-right">
+    <md-toolbar>
+        <md-toolbar class="md-warn" layout="row" layout-align="center center">
+            <img class="img-circle" ng-src="assets/images/feynman.jpg">
+            <md-menu md-offset="0 20">
+                <md-button class="capitalize" ng-click="$mdOpenMenu()" aria-label="Open menu">
+                    <span>Richard Feynman</span>
+                    <i class="material-icons">keyboard_arrow_down</i>
+                </md-button>
+                <md-menu-content width="3">
+                    <md-menu-item><md-button ng-click="$mdCloseMenu()" ui-sref="home.profile">Profile</md-button></md-menu-item>
+                    <md-menu-item><md-button ng-click="$mdCloseMenu()" ui-sref="home.dashboard">Log out</md-button></md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </md-toolbar>
+    </md-toolbar>
+
+    <section>
+        <md-toolbar md-theme="grey" class="md-hue-1">
+            <div class="md-toolbar-tools">
+                <h3>Messages</h3>
+            </div>
+        </md-toolbar>
+        <div ng-include src="'app/views/partials/messages.html'"/>
+    </section>
+</md-sidenav> -->
+
+
+<mat-drawer-container class="example-container" autosize>
+  <mat-drawer #drawer class="md-sidenav-left" mode="side">
+    <button g-repeat-start="item in vm.menuItems" layout="column" layout-align="center center" flex class="capitalize"
+      ng-click="vm.selectItem(item)">
+      <div hide-sm hide-md class="md-tile-content">
+        <i class="material-icons md-36">dashboard</i>
+      </div>
+      <div class="md-tile-content">
+        Dashboard
+      </div>
+    </button>
+    <button g-repeat-start="item in vm.menuItems" layout="column" layout-align="center center" flex class="capitalize"
+      ng-click="vm.selectItem(item)">
+      <div hide-sm hide-md class="md-tile-content">
+        <i class="material-icons md-36">person</i>
+      </div>
+      <div class="md-tile-content">
+        Profile
+      </div>
+    </button>
+    <button g-repeat-start="item in vm.menuItems" layout="column" layout-align="center center" flex class="capitalize"
+      ng-click="vm.selectItem(item)">
+      <div hide-sm hide-md class="md-tile-content">
+        <i class="material-icons md-36">info</i>
+      </div>
+      <div class="md-tile-content">
+        Order Details
+      </div>
+    </button>
+    
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+    <button type="button" mat-button (click)="drawer.toggle()">
+      Toggle sidenav
+    </button>
+  </div>
+
+</mat-drawer-container>
