--- a/cart/src/app/home/home.component.scss
+++ b/cart/src/app/home/home.component.scss
@@ -1,10 +1,4 @@
-@media only screen and (min-width: 600px) {
-    ::ng-deep .marleft{
-        margin-left:200px
-    }    
-}
-
-.table-head-fix{
-    font-size:16px;
-    color: #fb8c00;
+.container{
+    width: calc(100vw - 172px);
+    margin-left: 172px;
 }
