--- a/cart/src/app/sidenav/sidenav.component.html
+++ b/cart/src/app/sidenav/sidenav.component.html
@@ -1,85 +1,4 @@
-<!-- <md-sidenav md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left"
-            class="md-whiteframe-z2 md-sidenav-left">
-  <md-toolbar md-theme="custom" class="md-hue-1 md-whiteframe-z2">
-    <md-button layout="row" layout-align="center center" class="md-toolbar-tools md-warn"
-               href="https://github.com/flatlogic/angular-material-dashboard">
-      <h1>AMD</h1>
-    </md-button>
-  </md-toolbar>
-      <md-button ng-repeat-start="item in vm.menuItems" layout="column" layout-align="center center"
-                 flex class="capitalize" ng-click="vm.selectItem(item)"
-                 ui-sref-active="md-warn" ui-sref="{{item.sref}}">
-          <div hide-sm hide-md class="md-tile-content">
-              <i class="material-icons md-36">{{item.icon}}</i>
-          </div>
-          <div class="md-tile-content">
-              {{item.name}}
-          </div>
-      </md-button>
-      <md-divider ng-repeat-end></md-divider>
-      <md-button ng-click="vm.showActions($event)" layout-align="center center">
-          <div class="md-tile-content">
-            Actions
-          </div>
-      </md-button>
-</md-sidenav>
-
-<div layout="column" flex>
-    <md-toolbar layout="row" layout-align="center center">
-        <section layout-align="start center" layout-fill flex>
-            <md-button hide-gt-sm ng-click="vm.toggleItemsList()" aria-label="Menu">
-                <i class="material-icons">menu</i>
-            </md-button>
-        </section>
-        <section layout-align="end center">
-            <md-button class="toolbar-button" aria-label="Search">
-                <i class="material-icons">search</i>
-            </md-button>
-            <md-button class="toolbar-button" aria-label="Notifications">
-                <i class="material-icons">notifications</i>
-                <span class="notifications-label">7</span>
-            </md-button>
-            <md-button class="toolbar-button" aria-label="Settings" ng-click="vm.toggleRightSidebar()">
-                <i class="material-icons">menu</i>
-            </md-button>
-        </section>
-    </md-toolbar>
-
-    <md-content flex class="md-padding page-content">
-        <div ui-view></div>
-    </md-content>
-</div>
-
-<md-sidenav md-component-id="right"
-            class="md-whiteframe-z2 md-sidenav-right">
-    <md-toolbar>
-        <md-toolbar class="md-warn" layout="row" layout-align="center center">
-            <img class="img-circle" ng-src="assets/images/feynman.jpg">
-            <md-menu md-offset="0 20">
-                <md-button class="capitalize" ng-click="$mdOpenMenu()" aria-label="Open menu">
-                    <span>Richard Feynman</span>
-                    <i class="material-icons">keyboard_arrow_down</i>
-                </md-button>
-                <md-menu-content width="3">
-                    <md-menu-item><md-button ng-click="$mdCloseMenu()" ui-sref="home.profile">Profile</md-button></md-menu-item>
-                    <md-menu-item><md-button ng-click="$mdCloseMenu()" ui-sref="home.dashboard">Log out</md-button></md-menu-item>
-                </md-menu-content>
-            </md-menu>
-        </md-toolbar>
-    </md-toolbar>
-
-    <section>
-        <md-toolbar md-theme="grey" class="md-hue-1">
-            <div class="md-toolbar-tools">
-                <h3>Messages</h3>
-            </div>
-        </md-toolbar>
-        <div ng-include src="'app/views/partials/messages.html'"/>
-    </section>
-</md-sidenav> -->
-
-
-<mat-drawer-container class="example-container" autosize>
+<!-- <mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer class="md-sidenav-left" mode="side">
     <button g-repeat-start="item in vm.menuItems" layout="column" layout-align="center center" flex class="capitalize"
       ng-click="vm.selectItem(item)">
@@ -116,5 +35,75 @@
       Toggle sidenav
     </button>
   </div>
+</mat-drawer-container> -->
 
-</mat-drawer-container>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer [opened]="!small" class="sidenav mat-elevation-z8" fixedInViewport="true"
+      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'">
+      <mat-toolbar class="white"><img src="assets/logo.png" width="80%" style="margin:auto"></mat-toolbar>
+      <mat-nav-list>
+          <a class="sidenavelement" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}"
+              routerLink="/" mat-list-item href="#">
+              <mat-icon>dashboard</mat-icon> &nbsp; Dashboard
+          </a>
+          <a class="sidenavelement" routerLinkActive="active-link" routerLink="/user" mat-list-item href="#">
+              <mat-icon>person</mat-icon> &nbsp; User Profile
+          </a>
+          <a class="sidenavelement" routerLinkActive="active-link" routerLink="/table" mat-list-item href="#">
+              <mat-icon>table_chart</mat-icon> &nbsp; Table List
+          </a>
+          <a class="sidenavelement" routerLinkActive="active-link" routerLink="/typo" mat-list-item href="#">
+              <mat-icon>text_fields</mat-icon> &nbsp; Typography
+          </a>
+          <a class="sidenavelement" routerLinkActive="active-link" routerLink="/icons" mat-list-item href="#">
+              <mat-icon>insert_emoticon</mat-icon> &nbsp; Icons
+          </a>
+          <a class="sidenavelement" routerLinkActive="active-link" routerLink="/maps" mat-list-item href="#">
+              <mat-icon>map</mat-icon> &nbsp; Maps
+          </a>
+          <a class="sidenavelement" routerLinkActive="active-link" routerLink="/notify" mat-list-item href="#">
+              <mat-icon>notification_important</mat-icon> &nbsp; Notifications
+          </a>
+      </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+      <mat-toolbar color="primary">
+          <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
+              <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+          </button>
+          <span>Material Dashboard</span>
+          <span fxflex class="example-spacer"></span>
+          <button mat-icon-button>
+              <mat-icon>dashboard</mat-icon>
+          </button>
+          <button mat-icon-button matBadge="8" matBadgePosition="after" matBadgeColor="accent">
+              <mat-icon>notifications</mat-icon>
+          </button> &nbsp;
+
+          <a mat-button [matMenuTriggerFor]="menu">{{username}}</a>
+          <mat-menu #menu="matMenu">
+              <button mat-menu-item>
+                  <mat-icon>account_box</mat-icon>
+                  <span>Profile</span>
+              </button>
+              <button mat-menu-item>
+                  <mat-icon>settings</mat-icon>
+                  <span>Account Settings</span>
+              </button>
+              <button mat-menu-item>
+                  <mat-icon>notifications_off</mat-icon>
+                  <span>Disable alerts</span>
+              </button>
+              <button mat-menu-item *ngIf="isLogedIn">
+                  <mat-icon>exit_to_app</mat-icon>
+                  <span>Sign out</span>
+              </button>
+              <button mat-menu-item *ngIf="!isLogedIn" routerLink="/login">
+                <mat-icon>lock_open</mat-icon>
+                <span>Login</span>
+            </button>
+          </mat-menu>
+      </mat-toolbar>
+      <!-- Add Content Here -->
+  </mat-sidenav-content>
+</mat-sidenav-container>
