--- a/cart/src/app/sidenav/sidenav.component.scss
+++ b/cart/src/app/sidenav/sidenav.component.scss
@@ -1,27 +1,42 @@
-$left-sidenav-width: 110px;
-
-.md-sidenav-left {
-  width: $left-sidenav-width;
-  min-width: $left-sidenav-width;
-  max-width: $left-sidenav-width;
-}
-md-backdrop.md-sidenav-backdrop {
-  position: fixed;
+.companyName {
+  font-size: 150%;
 }
 
-.example-container {
-  width: 500px;
-  height: 300px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+.mat-toolbar {
+  height: 60px;
+  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+  // position: fixed;
 }
 
-.example-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
+div {
+  overflow: inherit;
 }
 
-.example-sidenav {
-  padding: 20px;
+// .mat-sidenav-container {
+//     min-height: calc(100vh - 60px) !important;
+// }
+
+a {
+  text-decoration: none;
+  font-size: 110%;
+  white-space: normal;
+}
+
+button {
+  font-size: 110%;
+  min-width: min-content;
+}
+
+.example-icon {
+  padding: 0 14px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+  box-sizing: border-box;
+}
+
+.mat-sidenav-content {
+font-size: 200%;
+text-align: center;
 }
