--- a/cart/src/app/dashboard/dashboard.component.html
+++ b/cart/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
 <div class="container">
   <h1>dashboard works!</h1>
+  <div class="example-button-row">
+      <button mat-raised-button>Basic</button>
+      <button mat-raised-button color="primary">Primary</button>
+      <button mat-raised-button color="accent">Accent</button>
+      <button mat-raised-button color="warn">Warn</button>
+      <button mat-raised-button disabled>Disabled</button>
+      <a mat-raised-button routerLink=".">Link</a>
+    </div>
+    <h2>Button</h2>
 </div>
