--- a/_theming.scss
+++ b/_theming.scss
@@ -1107,7 +1107,7 @@ $mat-grey: (
   800: #424242,
   900: #212121,
   A100: #ffffff,
-  A200: #eeeeee,
+  A200: #3c4252,
   A400: #bdbdbd,
   A700: #616161,
   contrast: (
