--- a/cart/src/my-theme.scss
+++ b/cart/src/my-theme.scss
@@ -9,8 +9,9 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$candy-app-primary: mat-palette($mat-light-blue);
-$candy-app-accent:  mat-palette($mat-pink, A200, A100, A400);
+
+$candy-app-primary: mat-palette($mat-grey, 900);
+$candy-app-accent:  mat-palette($mat-light-blue, 600);
 
 // The warn palette is optional (defaults to red).
 $candy-app-warn:    mat-palette($mat-red);
