--- a/cart/src/styles.scss
+++ b/cart/src/styles.scss
@@ -1,6 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/prebuilt-themes/purple-green.css";
+
+$fonts: Roboto,"Helvetica Neue",sans-serif;
 
 body{
     margin: 0;
+    font-family: $fonts;
 }
+h1, h2, h3, h4, h5, h6, strong, span, label, em {
+    font-family: $fonts;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
